src/sass/_rename_header.scss
.rename-header {
  @include mobile {
    align-items: flex-start;
  }

  .p-panel__title {
    display: flex;
    flex-direction: column;
    flex: 1;
    max-width: 100%;
    min-width: 0;

    @include extra-large {
      align-items: center;
      flex-direction: row;
    }

    .p-breadcrumbs {
      @include mobile {
        width: 100%;
      }
    }

    .breadcrumb-wrapper {
      display: flex !important;

      @include mobile {
        display: grid !important;
        grid-template-columns: 1fr auto;
        width: 100%;

        .continuous-breadcrumb:not(.name) {
          grid-row: 1;
          grid-column: 1;
        }

        .name-addon-item {
          grid-row: 1;
          grid-column: 2;
          display: flex;
          align-items: center;
          padding-right: $sph--small;
        }

        .name {
          grid-row: 2;
          grid-column: 1 / -1;
          overflow: hidden !important;
          white-space: nowrap !important;
          text-overflow: ellipsis !important;
          margin-right: 0;
        }
      }
    }

    .name {
      flex-shrink: 1;
      margin-right: $sph--large;
      min-width: 0;
      overflow: hidden !important;
      text-overflow: ellipsis !important;
      white-space: nowrap !important;

      > span > span {
        display: inherit !important;
      }

      &.has-addon::after {
        content: "";
      }

      &:hover {
        background: linear-gradient(
            45deg,
            $colors--theme--background-hover,
            $colors--theme--background-hover
          )
          no-repeat;
      }
    }

    .name-addon-item {
      display: none;
    }

    .rename {
      display: inline-flex;
      min-width: 33rem;
      white-space: nowrap;

      .name-input {
        margin-left: -1rem;
      }

      .cancel {
        margin-right: $sph--small;
      }

      .p-form-validation__message {
        font-variant-caps: initial;
        font-variant-numeric: initial;
        font-weight: initial;
        letter-spacing: initial;
        text-indent: initial;
      }
    }
  }

  .instance-header-state-controls {
    flex-shrink: 0;
    white-space: nowrap !important;
  }

  .p-panel__controls {
    flex-shrink: 0;
    margin-top: 0.2rem;
  }
}

